fixed weird spacing in personalSection btw heroimg and titlecol

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,7 @@ hr {
     flex: 1 1 auto;
     padding: 8rem 3rem;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     background: linear-gradient(45deg, #4b658b 10%, #111824, rgb(10, 10, 10), rgb(107, 45, 3), rgb(34, 3, 107));
 	background-size: 400% 400%;
     animation: gradientBG 15s ease infinite;
